--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
-<meta http-equiv="refresh" content="0;URL=https://weibo.com/">
+        <title>Auto Weibo</title>
+<meta http-equiv="refresh" content="0;URL=https://weibo.com/u/6609196945">
 </head>
 </html>
