--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <title>Auto Weibo</title>
+        <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?52780c709e6d20178d1993e7c3e614e1";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 <meta http-equiv="refresh" content="0;URL=https://weibo.com/u/6609196945">
 </head>
 </html>
